force-app/main/default/objects/Account/fields/ABCD_Code_SySo__c.field-meta.xml
<CustomField>
    <fullName>ABCD_Code_SySo__c</fullName>
    <label>ABCD Code SySo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>