force-app/main/default/objects/Account/fields/Credit_Limit_in_EUR__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_in_EUR__c</fullName>
    <label>Credit Limit in EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>