force-app/main/default/objects/Account/fields/ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Number__c</fullName>
    <label>ERP Number</label>
    <length>100</length>
    <required>True</required>
    <type>Text</type>
</CustomField>