force-app/main/default/objects/Account/fields/ERP_Source__c.field-meta.xml
<CustomField>
    <fullName>ERP_Source__c</fullName>
    <label>ERP Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>