force-app/main/default/objects/Account/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>