force-app/main/default/objects/Account/fields/Mail_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Mail_Email_Address__c</fullName>
    <label>Mail Email Address</label>
    <type>Email</type>
</CustomField>