force-app/main/default/objects/Account/fields/NDA_Exists__c.field-meta.xml
<CustomField>
    <fullName>NDA_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Exists</label>
    <type>Checkbox</type>
</CustomField>