force-app/main/default/objects/Account/fields/Planning_Partner__c.field-meta.xml
<CustomField>
    <fullName>Planning_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planning Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Planning Partner)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>