force-app/main/default/objects/Account/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <description>Customer’s geographical region—for sales operations use only.</description>
    <inlineHelpText>In which region is the customer based?</inlineHelpText>
    <label>region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>