force-app/main/default/objects/Account/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dummy Value 1</fullName>
            </value>
            <value>
                <fullName>Dummy Value 2</fullName>
            </value>
            <value>
                <fullName>Dummy Value 3</fullName>
            </value>
            <value>
                <fullName>Dummy Value 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>