force-app/main/default/objects/Account/fields/SomeCheckbox__c.field-meta.xml
<CustomField>
    <fullName>SomeCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SomeCheckbox</label>
    <type>Checkbox</type>
</CustomField>