force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <summarizedField>Expense_Mercedes__c.cost__c</summarizedField>
    <summaryForeignKey>Expense_Mercedes__c.AG100__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>