force-app/main/default/objects/Account/fields/Total_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoices__c</fullName>
    <label># Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>