force-app/main/default/objects/Account/fields/Total_Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Min_Amount__c</fullName>
    <label>Total Min Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>