force-app/main/default/objects/Account/fields/Total_Open_Invoices_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Invoices_Amount__c</fullName>
    <label>Total Open Invoices Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>