force-app/main/default/objects/Account/fields/Total_Over_Due_Invoices_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Over_Due_Invoices_Amount__c</fullName>
    <label>Total Over Due Invoices Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>