force-app/main/default/objects/Account/fields/Total_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Total_Quotes__c</fullName>
    <label># Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>