force-app/main/default/objects/Account/fields/Unique_ERP_Key_Customer__c.field-meta.xml
<CustomField>
    <fullName>Unique_ERP_Key_Customer__c</fullName>
    <externalId>true</externalId>
    <label>Unique ERP Key Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>